checked and solved band, dos and es bugs

--- a/tutorial/elastic_properties.ipynb
+++ b/tutorial/elastic_properties.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "29cad7e8",
    "metadata": {},
    "outputs": [],
@@ -43,10 +43,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "8c414444",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/PyTool_Mac/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:198: UserWarning: Deprecated. Define output during initialization.\n",
+      "  warnings.warn('Deprecated. Define output during initialization.')\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "EXITING: a .out file needs to be specified",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/anaconda3/envs/PyTool_Mac/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:170\u001b[0m, in \u001b[0;36mCrystal_output._read_output\u001b[0;34m(self, output_name)\u001b[0m\n\u001b[1;32m    169\u001b[0m     output_name \u001b[38;5;241m=\u001b[39m output_name\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.out\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m--> 170\u001b[0m file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43moutput_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mignore\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    171\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mreadline()\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/coesite_ela.out'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m CO \u001b[38;5;241m=\u001b[39m \u001b[43mCrystal_output\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_cry_output\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata/coesite_ela.out\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/PyTool_Mac/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:199\u001b[0m, in \u001b[0;36mCrystal_output.read_cry_output\u001b[0;34m(self, output_name)\u001b[0m\n\u001b[1;32m    196\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m    198\u001b[0m warnings\u001b[38;5;241m.\u001b[39mwarn(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDeprecated. Define output during initialization.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 199\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_read_output\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput_name\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/PyTool_Mac/lib/python3.9/site-packages/CRYSTALpytools/crystal_io.py:174\u001b[0m, in \u001b[0;36mCrystal_output._read_output\u001b[0;34m(self, output_name)\u001b[0m\n\u001b[1;32m    172\u001b[0m     file\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m    173\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m--> 174\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\n\u001b[1;32m    175\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEXITING: a .out file needs to be specified\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    177\u001b[0m \u001b[38;5;66;03m# Check the calculation terminated correctly\u001b[39;00m\n\u001b[1;32m    178\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mterminated \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: EXITING: a .out file needs to be specified"
+     ]
+    }
+   ],
    "source": [
     "CO = Crystal_output().read_cry_output(\"data/coesite_ela.out\")"
    ]
@@ -409,9 +435,7 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "d9c314d6",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -507,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
