updated except for topond tutorials

--- a/examples/input_and_basisset/input_and_basisset.ipynb
+++ b/examples/input_and_basisset/input_and_basisset.ipynb
@@ -331,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.crystal_io.Crystal_input at 0x7f31b2a65340>"
+       "<CRYSTALpytools.crystal_io.Crystal_input at 0x7fba4c0203a0>"
       ]
      },
      "execution_count": 6,
@@ -653,7 +653,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.crystal_io.Crystal_input at 0x7f31adc2e850>"
+       "<CRYSTALpytools.crystal_io.Crystal_input at 0x7fba45ac5880>"
       ]
      },
      "execution_count": 12,
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "e1174d13-3da9-4e33-92bd-71421152f87a",
    "metadata": {
     "tags": []
@@ -926,17 +926,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "b0fcafb0-70ec-4163-8501-5f8b8aa9ecda",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.crystal_io.Properties_input at 0x7f31ac5d2610>"
+       "<CRYSTALpytools.crystal_io.Properties_input at 0x7fba4a2803a0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "8765465d-62b7-4a78-9182-0db5ab2b9041",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "c700b501-ec46-4eb2-85c1-bd9b603b4771",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "72ef9b0b-f5eb-4fa5-89fd-625e4fdd249b",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "07eb9c2e-6029-4ad8-b932-3503723c5f47",
    "metadata": {},
    "outputs": [
