--- a/examples/input_and_basisset/basisset_advanced.ipynb
+++ b/examples/input_and_basisset/basisset_advanced.ipynb
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fdee51fff40>"
+       "<matplotlib.legend.Legend at 0x7f0e069f6a30>"
       ]
      },
      "execution_count": 3,
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a6ccff99-e379-4b0a-91ae-4e14066155f4",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "69d36327-e5dd-41c7-8669-6721227e2153",
    "metadata": {},
    "outputs": [
