XRD tested. Old methods tested.

--- a/examples/relativistics/relativistics.ipynb
+++ b/examples/relativistics/relativistics.ipynb
@@ -43,8 +43,8 @@
    "source": [
     "from CRYSTALpytools.crystal_io import Properties_output\n",
     "\n",
-    "obj = Properties_output('WSe2_prop.out')\n",
-    "obj.read_relativistics('WSe2_prop.f25', type='SPICURDENS')\n",
+    "obj = Properties_output('relt_WSe2.out')\n",
+    "obj.read_relativistics('relt_WSe2.f25', type='SPICURDENS')\n",
     "print('Type: {}'.format(type(obj.SPICURDENS)))\n",
     "print('Base vectors (point A, B, C):')\n",
     "print(obj.SPICURDENS.base)\n",
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "obj.read_relativistics('WSe2_prop.f25', type='MAGNETIZ')\n",
+    "obj.read_relativistics('relt_WSe2.f25', type='MAGNETIZ')\n",
     "print('Type: {}'.format(type(obj.MAGNETIZ)))\n",
     "print('Base vectors (point A, B, C):')\n",
     "print(obj.MAGNETIZ.base)\n",
@@ -132,7 +132,7 @@
    "source": [
     "from CRYSTALpytools.relativistics import ChargeDensity\n",
     "\n",
-    "obj = ChargeDensity.from_file('WSe2_prop.f25', 'WSe2_prop.out')\n",
+    "obj = ChargeDensity.from_file('relt_WSe2.f25', 'relt_WSe2.out')\n",
     "print('Type: {}'.format(type(obj)))\n",
     "\n",
     "fig = obj.plot_2D(option='charge')"
@@ -174,7 +174,7 @@
    "source": [
     "from CRYSTALpytools.relativistics import Magnetization\n",
     "\n",
-    "fig = Magnetization.from_file('WSe2_prop.f25', 'WSe2_prop.out').plot_2D()"
+    "fig = Magnetization.from_file('relt_WSe2.f25', 'relt_WSe2.out').plot_2D()"
    ]
   },
   {
@@ -207,7 +207,7 @@
    "source": [
     "from CRYSTALpytools.relativistics import Magnetization\n",
     "\n",
-    "fig = Magnetization.from_file('WSe2_prop.f25', 'WSe2_prop.out').plot_2D(\n",
+    "fig = Magnetization.from_file('relt_WSe2.f25', 'relt_WSe2.out').plot_2D(\n",
     "    quiverplot=True, colorplot=False\n",
     ")"
    ]
@@ -240,7 +240,7 @@
    "source": [
     "from CRYSTALpytools.relativistics import Magnetization\n",
     "\n",
-    "fig = Magnetization.from_file('WSe2_prop.f25', 'WSe2_prop.out').plot_2D(\n",
+    "fig = Magnetization.from_file('relt_WSe2.f25', 'relt_WSe2.out').plot_2D(\n",
     "    quiverplot=False, colorplot=True\n",
     ")"
    ]
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "5c9c655d-ca53-4112-8e0b-8cb44ee794a4",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
    "source": [
     "from CRYSTALpytools.relativistics import Magnetization\n",
     "\n",
-    "fig = Magnetization.from_file('WSe2_prop.f25', 'WSe2_prop.out').plot_2D(\n",
+    "fig = Magnetization.from_file('relt_WSe2.f25', 'relt_WSe2.out').plot_2D(\n",
     "    rectangle=True, a_range=[-1, 1], b_range=[-1, 1]\n",
     ")"
    ]
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "deb328c9-27fa-472a-970e-0d24d6753e09",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
    "source": [
     "from CRYSTALpytools.relativistics import SpinCurrentDensity\n",
     "\n",
-    "fig = SpinCurrentDensity.from_file('WSe2_prop.f25', 'WSe2_prop.out').plot_2D(\n",
+    "fig = SpinCurrentDensity.from_file('relt_WSe2.f25', 'relt_WSe2.out').plot_2D(\n",
     "    direction=['x', 'y'], figsize=[8, 6],  rectangle=True,\n",
     ")"
    ]
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "9bd59a8a-9c5d-4421-aa36-a9c075b7104f",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
     "from CRYSTALpytools.plot import plot_relativistics2D\n",
     "\n",
     "fig = plot_relativistics2D(\n",
-    "    'WSe2_prop.f25', type=['ORBCURDENS', 'SPICURDENS'], output='WSe2_prop.out',\n",
+    "    'relt_WSe2.f25', type=['ORBCURDENS', 'SPICURDENS'], output='relt_WSe2.out',\n",
     "    colorplot=False, direction='z', layout=[1, 2], figsize=[10, 6])"
    ]
   },
