update for doc site

--- a/examples/input_and_basisset/input_and_basisset.ipynb
+++ b/examples/input_and_basisset/input_and_basisset.ipynb
@@ -5,7 +5,7 @@
    "id": "68158073",
    "metadata": {},
    "source": [
-    "# Input and Basis Set generation by CRYSTALpytools\n",
+    "# Input and Basis Set Generation\n",
     "\n",
     "CRYSTALpytools provides a branch of methods to prepare input files and basis sets interactively. They are kept in the `crystal_io` module.\n",
     "\n",
@@ -331,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.crystal_io.Crystal_input at 0x7fba4c0203a0>"
+       "<CRYSTALpytools.crystal_io.Crystal_input at 0x7fdb6d111370>"
       ]
      },
      "execution_count": 6,
@@ -371,6 +371,14 @@
       "EXTERNAL\n",
       "ENDGEOM\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/huanyu/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/pymatgen/io/cif.py:1287: UserWarning: Issues encountered while parsing CIF: Skipping relative stoichiometry check because CIF does not contain formula keys.\n",
+      "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n"
      ]
     }
    ],
@@ -653,7 +661,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.crystal_io.Crystal_input at 0x7fba45ac5880>"
+       "<CRYSTALpytools.crystal_io.Crystal_input at 0x7fdbc938ff70>"
       ]
      },
      "execution_count": 12,
@@ -933,7 +941,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.crystal_io.Properties_input at 0x7fba4a2803a0>"
+       "<CRYSTALpytools.crystal_io.Properties_input at 0x7fdb64540910>"
       ]
      },
      "execution_count": 17,
@@ -1111,6 +1119,14 @@
       "ENDGEOM\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/huanyu/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/pymatgen/io/cif.py:1287: UserWarning: Issues encountered while parsing CIF: Skipping relative stoichiometry check because CIF does not contain formula keys.\n",
+      "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n"
+     ]
     }
    ],
    "source": [
@@ -1218,6 +1234,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.19"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
