--- a/examples/thermodynamics/harmonic.ipynb
+++ b/examples/thermodynamics/harmonic.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "53a31cc1-616e-47a1-984b-7a7c2a61caad",
    "metadata": {},
    "outputs": [
@@ -125,19 +125,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7511f19a-757f-4ad4-90ec-b3203b74f20a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of q / k points: 216\n",
-      "Number of modes at Gamma: 240\n",
-      "The first non-translational mode frequnecy at Gamma: 1.2303 THz\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -145,6 +136,15 @@
       "/home/huanyu/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:556: UserWarning: Negative frequencies detected.\n",
       "  Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by 0.\n",
       "  self = PhononBASE.clean_imaginary(self, threshold=imaginary_tol)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of q / k points: 216\n",
+      "Number of modes at Gamma: 240\n",
+      "The first non-translational mode frequnecy at Gamma: 1.2303 THz\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d25b993d-1af6-4d30-89dc-e73f1ddb86c4",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "97f77ef7-92c0-4624-a77d-21aaaecab6d2",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "c72047e9-c216-4e73-92b8-8aee3d7ba28c",
    "metadata": {},
    "outputs": [
@@ -356,26 +356,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "5f55547c-671e-47c0-9c0f-608099d2165b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/huanyu/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:556: UserWarning: Negative frequencies detected.\n",
-      "  Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by 0.\n",
-      "  self = PhononBASE.clean_imaginary(self, threshold=imaginary_tol)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.thermodynamics.Harmonic at 0x7f2e000c5b20>"
+       "<CRYSTALpytools.thermodynamics.Harmonic at 0x7f078f3b9f40>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,6 +406,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.19"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
