--- a/examples/input_and_basisset/basisset_advanced.ipynb
+++ b/examples/input_and_basisset/basisset_advanced.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Basis Set: Advanced\n",
     "\n",
-    "In the examples of 'input_and_basisset', basic setups of basis set has been introduced. Here are examples to explain the structure of basis set objects used in CRYSTALpytools to help customizing and testing basis sets.\n",
+    "In the examples of [Input and Basis Set Generation](input_and_basisset.ipynb), basic setups of basis set has been introduced. Here are examples to explain the structure of basis set objects used in CRYSTALpytools to help customizing and testing basis sets.\n",
     "\n",
     "Basis set converison highly depends on the [Basis Set Exchange (BSE) Python API](https://molssi-bse.github.io/basis_set_exchange/index.html). But for the optimal compatibility, CRYSTALpytools has its own classes and I/O methods for the CRYSTAL basis set format.\n",
     "\n",
@@ -329,7 +329,7 @@
     "\n",
     "The `BasisSetBASE` class is essentially a list of `AtomBS` objects, which manages all the basis sets defined in a system. It is also where the `from_*()` methods are defined.\n",
     "\n",
-    "For more details, please refer to the module-specific documentations."
+    "For more details, please refer to the [developer's API documentation](../../docs_source/crystalpytools.base.basisset.rst)."
    ]
   }
  ],
