--- a/examples/phonons/phonons.ipynb
+++ b/examples/phonons/phonons.ipynb
@@ -351,7 +351,7 @@
    "id": "f287c31e-8d95-4d9a-8b24-1d0e441ed8d2",
    "metadata": {},
    "source": [
-    "For more details, please refer to the module specific documentations."
+    "For more details, please refer to the [API documentations](../../docs_source/crystalpytools.phonons.rst)."
    ]
   }
  ],
