--- a/examples/spectra/spectra.ipynb
+++ b/examples/spectra/spectra.ipynb
@@ -504,7 +504,7 @@
    "id": "793c011b-4319-4c1c-8b6c-f913a9879a46",
    "metadata": {},
    "source": [
-    "For more information, please refer to the module-specific documentations."
+    "For more information, please refer to the [API documentations](../../docs_source/crystalpytools.spectra.rst)."
    ]
   }
  ],
