update broken links

--- a/examples/electronic_structure/electronic_structure.ipynb
+++ b/examples/electronic_structure/electronic_structure.ipynb
@@ -726,7 +726,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more details, please refer to [API documentations](../../docs_source/crystalpytools.electronics.rst)."
+    "For more details, please refer to [API documentations](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.electronics.html)."
    ]
   }
  ],
