--- a/examples/input_and_basisset/basisset_advanced.ipynb
+++ b/examples/input_and_basisset/basisset_advanced.ipynb
@@ -329,7 +329,7 @@
     "\n",
     "The `BasisSetBASE` class is essentially a list of `AtomBS` objects, which manages all the basis sets defined in a system. It is also where the `from_*()` methods are defined.\n",
     "\n",
-    "For more details, please refer to the [developer's API documentation](../../docs_source/crystalpytools.base.basisset.rst)."
+    "For more details, please refer to the [developer's API documentation](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.base.basisset.html)."
    ]
   }
  ],
