--- a/examples/phonons/phonons.ipynb
+++ b/examples/phonons/phonons.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Phonons\n",
     "\n",
-    "Here code examples for phonons are provided. This part will be focused on the I/O and visualization of phonon-related properties. For thermodynamic properties, please refer to the thermodynamics module and for IR/Raman spectra, please refer to the spectra module.\n",
+    "Here code examples for phonons are provided. This part will be focused on the I/O and visualization of phonon-related properties. For thermodynamic properties, please refer to the [thermodynamics module](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.thermodynamics.html) and for IR/Raman spectra, please refer to the [spectra module](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.spectra.html).\n",
     "\n",
     "## I/O methods in 'crystal_io.Crystal_output'\n",
     "\n",
@@ -351,7 +351,7 @@
    "id": "f287c31e-8d95-4d9a-8b24-1d0e441ed8d2",
    "metadata": {},
    "source": [
-    "For more details, please refer to the [API documentations](../../docs_source/crystalpytools.phonons.rst)."
+    "For more details, please refer to the [API documentations](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.phonons.html)."
    ]
   }
  ],
