--- a/examples/relativistics/relativistics.ipynb
+++ b/examples/relativistics/relativistics.ipynb
@@ -358,7 +358,7 @@
    "id": "1843c2da-0a48-410f-a0ee-9811f973f3bc",
    "metadata": {},
    "source": [
-    "For more details, please refer to the [API documentations](../../docs_source/crystalpytools.relativistics.rst)."
+    "For more details, please refer to the [API documentations](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.relativistics.html)."
    ]
   }
  ],
