--- a/examples/thermodynamics/harmonic.ipynb
+++ b/examples/thermodynamics/harmonic.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Lattice Dynamics 1: Harmonic Approximation\n",
     "\n",
-    "The `thermodynamics` module is developed for both harmonic approximated (HA) and quasi-harmonic approximated (QHA) lattice dynamics. For simplicity, this part is focused only on HA phonons. For QHA, please refer to [Lattice Dynamics 2: Quasi-Harmonic Approximation](qha.ipynb) example book in the same catagory. For phonon band and density of states, please refer to the [phonons module](../../docs_source/crystalpytools.phonons.rst).\n",
+    "The `thermodynamics` module is developed for both harmonic approximated (HA) and quasi-harmonic approximated (QHA) lattice dynamics. For simplicity, this part is focused only on HA phonons. For QHA, please refer to [Lattice Dynamics 2: Quasi-Harmonic Approximation](qha.ipynb) example book in the same catagory. For phonon band and density of states, please refer to the [phonons module](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.phonons.html).\n",
     "\n",
     "## Instantiation\n",
     "\n",
@@ -385,7 +385,7 @@
    "id": "76b5ad58-fa1c-4456-a4e9-5534ba94df77",
    "metadata": {},
    "source": [
-    "For more details, please refer to the [API documentations](../../docs_source/crystalpytools.thermodynamics.rst)."
+    "For more details, please refer to the [API documentations](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.thermodynamics.html)."
    ]
   }
  ],
