--- a/examples/thermodynamics/qha.ipynb
+++ b/examples/thermodynamics/qha.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Lattice Dynamics 2: Quasi-Harmonic Approximation\n",
     "\n",
-    "The `thermodynamics` module is developed for both harmonic approximated (HA) and quasi-harmonic approximated (QHA) lattice dynamics. For simplicity, this part is focused only on QHA phonons. For HA, please refer to the [Lattice Dynamics 1: Harmonic Approximation](harmonic.ipynb) example book in the same catagory. For phonon band and density of states, please refer to the [phonons module](../../docs_source/crystalpytools.phonons.rst).\n",
+    "The `thermodynamics` module is developed for both harmonic approximated (HA) and quasi-harmonic approximated (QHA) lattice dynamics. For simplicity, this part is focused only on QHA phonons. For HA, please refer to the [Lattice Dynamics 1: Harmonic Approximation](harmonic.ipynb) example book in the same catagory. For phonon band and density of states, please refer to the [phonons module](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.phonons.html).\n",
     "\n",
     "## Basic thermodynamic properties\n",
     "\n",
@@ -835,7 +835,7 @@
    "id": "6753dccd-c065-4550-aaaa-ba68635620ed",
    "metadata": {},
    "source": [
-    "For more information please refer to the [API documentation](../../docs_source/crystalpytools.thermodynamics.rst)."
+    "For more information please refer to the [API documentation](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.thermodynamics.html)."
    ]
   }
  ],
