--- a/examples/charge_density/charge_density.ipynb
+++ b/examples/charge_density/charge_density.ipynb
@@ -588,7 +588,7 @@
    "id": "e49b05d7-8cf6-427d-b4e3-8c13dfc79784",
    "metadata": {},
    "source": [
-    "For more details, please refer to the [API documentations](../../docs_source/crystalpytools.electronics.rst)."
+    "For more details, please refer to the [API documentations](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.electronics.html)."
    ]
   }
  ],
