--- a/examples/convert/convert.ipynb
+++ b/examples/convert/convert.ipynb
@@ -690,7 +690,7 @@
    "id": "2c2859bc-a391-459d-9a20-5b261865ad9d",
    "metadata": {},
    "source": [
-    "For more information please refer to the [API documentations](../../docs_source/crystalpytools.convert.rst)."
+    "For more information please refer to the [API documentations](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.convert.html)."
    ]
   }
  ],
