--- a/examples/input_and_basisset/input_and_basisset.ipynb
+++ b/examples/input_and_basisset/input_and_basisset.ipynb
@@ -1213,7 +1213,7 @@
    "id": "8dc6f9e5-ae73-4ea7-9ef7-9cc3ef755aa5",
    "metadata": {},
    "source": [
-    "For more details, please refer to the [API documentations](../../docs_source/crystalpytools.crystal_io.rst) and the developer's documentation of [InputBASE](../../docs_source/crystalpytools.base.inputbase.rst), [Crystal_inputBASE](../../docs_source/crystalpytools.base.crysd12.rst) and [Properties_inputBASE](../../docs_source/crystalpytools.base.propd3.rst) classes. For more information about basis sets, also check the [Basis Set: Advanced](basisset_advanced.ipynb) example book."
+    "For more details, please refer to the [API documentations](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.crystal_io.html) and the developer's documentation of [InputBASE](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.base.inputbase.html), [Crystal_inputBASE](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.base.crysd12.html) and [Properties_inputBASE](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.base.propd3.html) classes. For more information about basis sets, also check the [Basis Set: Advanced](basisset_advanced.ipynb) example book."
    ]
   }
  ],
