--- a/examples/output/output.ipynb
+++ b/examples/output/output.ipynb
@@ -665,7 +665,7 @@
    "id": "0dfe3a12-efeb-42c5-9b4f-a965e32fb265",
    "metadata": {},
    "source": [
-    "For more information, please refer to the [API documentations](../../docs_source/crystalpytools.crystal_io.rst)."
+    "For more information, please refer to the [API documentations](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.crystal_io.html)."
    ]
   }
  ],
