--- a/examples/transport/transport.ipynb
+++ b/examples/transport/transport.ipynb
@@ -549,7 +549,7 @@
    "id": "c0572161-22cb-4a87-bc3a-df5746fca4a3",
    "metadata": {},
    "source": [
-    "For more details please refer to the [API documentations](../../docs_source/crystalpytools.transport.rst)."
+    "For more details please refer to the [API documentations](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.transport.html)."
    ]
   }
  ],
