Emergency bug fix for convert and example book

--- a/examples/convert/convert.ipynb
+++ b/examples/convert/convert.ipynb
@@ -37,10 +37,10 @@
       "angles:  60.000000  60.000000  60.000000\n",
       "pbc   :       True       True       True\n",
       "Sites (2)\n",
-      "  #  SP       a     b     c\n",
-      "---  ----  ----  ----  ----\n",
-      "  0  Mg     0     0     0\n",
-      "  1  O     -0.5  -0.5  -0.5\n"
+      "  #  SP      a    b     c\n",
+      "---  ----  ---  ---  ----\n",
+      "  0  Mg    0    0     0\n",
+      "  1  O     0.5  0.5  -0.5\n"
      ]
     }
    ],
@@ -253,6 +253,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "933a782e-769d-4981-8962-93a600cb29c8",
+   "metadata": {},
+   "source": [
+    "Alternatively, a 2D periodic structure is returned with default 500 Angstrom along non-periodic direction(s)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f92efcfc-8d2a-472d-98e4-2609fcddced9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full Formula (Mg2 O4)\n",
+      "Reduced Formula: MgO2\n",
+      "abc   :   3.009789   3.009789 500.000000\n",
+      "angles:  90.000000  90.000000  90.000000\n",
+      "pbc   :       True       True      False\n",
+      "Sites (6)\n",
+      "  #  SP      a    b          c\n",
+      "---  ----  ---  ---  ---------\n",
+      "  0  Mg    0    0.5   0.002128\n",
+      "  1  Mg    0.5  0    -0.002128\n",
+      "  2  O     0    0.5  -0.002128\n",
+      "  3  O     0.5  0     0.002128\n",
+      "  4  O     0.5  0    -0.006128\n",
+      "  5  O     0    0.5   0.006128\n"
+     ]
+    }
+   ],
+   "source": [
+    "from CRYSTALpytools.convert import cry_gui2pmg\n",
+    "\n",
+    "struc = cry_gui2pmg('conv_mgo100.gui')\n",
+    "print(struc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3fa9dd99",
    "metadata": {},
    "source": [
@@ -269,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ce4f04fd",
    "metadata": {
     "tags": []
@@ -300,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4be2730e",
    "metadata": {
     "tags": []
@@ -312,7 +354,7 @@
        "<Axes: xlabel='$\\\\mathrm{Wave\\\\ Vector}$', ylabel='$\\\\mathrm{E\\\\ -\\\\ E_f\\\\ (eV)}$'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -683,44 +725,6 @@
     "\n",
     "cry_out2xyz('conv_toluene.out', 'conv_toluene.xyz')\n",
     "!cat conv_toluene.xyz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2be4b39c-739b-4f13-9b78-d0887093c1e4",
-   "metadata": {},
-   "source": [
-    "## Saving data grids\n",
-    "\n",
-    "### The 'cry_cube2xsf()' function\n",
-    "Convert 3D scalar field data in CUBE file into [XCrySDen](http://www.xcrysden.org/) XSF files, which enables periodicity of the structure and can be visualized by popular software such as [XCrySDen](http://www.xcrysden.org/), [VESTA](https://jp-minerals.org/vesta/en/) or [VMD](https://www.ks.uiuc.edu/Research/vmd/).\n",
-    "\n",
-    "It is important that CUBE file follows CRYSTAL convention (See [API documentations](https://crystal-code-tools.github.io/CRYSTALpytools/crystalpytools.convert.html#CRYSTALpytools.convert.cry_cube2xsf)).\n",
-    "\n",
-    "For low dimensional systmes it's also important to specify the periodicity to avoid potential file loading error of XCrySDen.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "0a1f68ed-3330-412b-a8db-e058d0d3381a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from CRYSTALpytools.convert import cry_cube2xsf\n",
-    "\n",
-    "cry_cube2xsf('../charge_density/dens_MgO.cube', 'conv_MgO.xsf', 'SLAB')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0f4dc5a3-54f1-43e6-b3d0-6c17b4945a02",
-   "metadata": {},
-   "source": [
-    "Visualize the 3\\*3 supercell in VESTA.\n",
-    "\n",
-    "<img src=\"./conv_MgO.png\" width=\"480\">"
    ]
   },
   {
